[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forkmixer"
version = "2.0.0"
description = "ForkMixer -- A fork of Mixer, a fixtures replacement. Supported Django ORM, SqlAlchemy ORM, Mongoengine ODM and custom python objects."
readme = "README.rst"
license = {text = "BSD"}
authors = [
    {name = "Paul Chubatyy", email = "xobb@citylance.biz"},
    {name = "Kirill Klenov", email = "horneds@gmail.com"}
]
keywords = ["django", "flask", "sqlalchemy", "testing", "mock", "stub", "mongoengine", "data"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "Faker>=5.4.0",
]

[project.optional-dependencies]
tests = [
    "Django>=5.1",
    "Flask>=1.0",
    "Marshmallow>=3.9",
    "SQLAlchemy>=1.1.4",
    "flask-sqlalchemy>=2.1",
    "mongoengine>=0.10.1",
    "peewee>=3.7.0",
    "pony>=0.7",
    "pytest",
]
postgres = [
    "psycopg2-binary>=2.8.4",
]

[project.urls]
Homepage = "https://github.com/paulchubatyy/forkmixer"
Documentation = "https://github.com/paulchubatyy/forkmixer"
"Source code" = "https://github.com/paulchubatyy/forkmixer"
"Issue tracker" = "https://github.com/paulchubatyy/forkmixer/issues"
"Original Project" = "https://github.com/klen/mixer"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["forkmixer*"]

[tool.pytest.ini_options]
addopts = "-xsv"

[tool.pylama]
linters = "pycodestyle,pyflakes,mccabe"

[[tool.pylama.files]]
path = "tests/*"
ignore = "D"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "bump2version>=1.0",
    "sphinx>=4.0",
    "pylama>=8.0",
    "setuptools>=65.0",
    "python-semantic-release>=10.0.0",
]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
]
version_variables = [
    "forkmixer/__init__.py:__version__",
]
branch = "main"
upload_to_vcs_release = true
upload_to_pypi = false
build_command = "uv build"
major_on_zero = true
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease = false

[tool.semantic_release.changelog]
template_dir = "templates"
exclude_commit_patterns = [
    "^chore",
    "^ci",
    "^docs",
    "^style",
    "^test",
    "^build",
]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
